<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">On/Off</string>
    <string name="app_help">HELP</string>
    <string name="app_scores">HIGHSCORES</string>
    <string name="app_desc">Switch off all lights</string>
    <string name="menu_acerca_de">ACERCA DE...</string>
    <string name="menu_terminar">ABANDONAR</string>
    <string name="menu_pausa">PAUSAR</string>
    <string name="menu_musica">SONIDO ON/OFF</string>
    <string name="menu_reset">REINICIAR</string>
    <string name="mensaje_salir">¿Deseas salir del juego?</string>
    <string name="mensaje_acerca_de">"Creado por 9UNDERGROUND

Si tienes alguna sugerencia puedes enviarmela por correo:

nineunderground@gmail.com"</string>
    <string name="descripcion_introducir_nombre">"Se acabo el tiempo.
Por favor, introduce tu nombre:

"</string>
    <string name="descripcion_juego_entero_superado">"Se acabo el juego, has completado todos los niveles.
Por favor, introduce tu nombre:

"</string>
    <string name="descripcion_salir_partida">¿Deseas abandonar la partida?</string>
    <string name="descripcion_next_level">"Has completado con exito este nivel. 
Suerte en el próximo!"</string>
    <string name="instrucciones_objetivo_titulo">"
OBJETIVO:"</string>
    <string name="instrucciones_objetivo">"Apagar todas las luces antes de 60 segundos.
"</string>
    <string name="instrucciones_instrucciones_titulo">INSTRUCCIONES:</string>
    <string name="instrucciones_instrucciones">"Las bombillas se apagan o se encienden segun su estado. Cuando se pulsa una bombilla se cambia el estado a la bombilla pulsada y las bombillas no-diagonales que limitan con ella. Niveles aleatorios.
"</string>
    <string name="instrucciones_puntuacion_titulo">PUNTUACIONES:</string>
    <string name="instrucciones_puntuacion">Cuando pasas de nivel, se cuenta los segundos restantes hasta 500 puntos. Si reinicias el nivel te penalizas con 300 menos.</string>
    <string name="instrucciones_como_jugar">"OBJETIVO:
Apagar todas las luces. 

INSTRUCCIONES:
Las bombillas se apagan o se encienden segun su estado. Cuando se pulsa una bombilla se cambia el estado a la bombilla pulsada y las bombillas no-diagonales que limitan con ella. 

PUNTUACIONES:
Cuando pasas de nivel, se cuenta los segundos restantes hasta 500 puntos. Si reinicias el nivel te penalizas con 300 menos."</string>
</resources>
