<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" />
    <ImageView android:id="@id/animacion_lampara" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="fitXY" />
    <TextView android:textSize="10.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="bottom" android:id="@id/tituloObjetivo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instrucciones_objetivo_titulo" android:layout_weight="0.5" />
    <TextView android:textSize="8.0dip" android:textColor="#ff0000ff" android:gravity="left" android:id="@id/objetivo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instrucciones_objetivo" android:layout_weight="1.0" />
    <TextView android:textSize="10.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="bottom" android:id="@id/tituloInstrucciones" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instrucciones_instrucciones_titulo" android:layout_weight="0.5" />
    <TextView android:textSize="8.0dip" android:textColor="#ff0000ff" android:gravity="left" android:id="@id/instrucciones" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instrucciones_instrucciones" android:layout_weight="1.0" />
    <TextView android:textSize="10.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="bottom" android:id="@id/tituloPuntuacion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instrucciones_puntuacion_titulo" android:layout_weight="0.5" />
    <TextView android:textSize="8.0dip" android:textColor="#ff0000ff" android:gravity="left" android:id="@id/puntuacion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instrucciones_puntuacion" android:layout_weight="1.0" />
    <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff0000ff" android:id="@id/boton_volver_de_ayuda" android:background="@drawable/btn_onoff" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="VOLVER" android:shadowColor="#ff000000" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.2" android:layout_x="1.0px" android:layout_y="1.0px" android:layout_weight="1.5" />
</LinearLayout>