<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    <ImageView android:gravity="center" android:id="@id/animacion_lampara" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <LinearLayout android:gravity="left" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="left" android:id="@id/tituloObjetivo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instrucciones_objetivo_titulo" />
        <TextView android:textSize="12.0dip" android:textColor="#ff0000ff" android:gravity="left" android:id="@id/objetivo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instrucciones_objetivo" />
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="left" android:id="@id/tituloInstrucciones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instrucciones_instrucciones_titulo" />
        <TextView android:textSize="12.0dip" android:textColor="#ff0000ff" android:gravity="left" android:id="@id/instrucciones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instrucciones_instrucciones" />
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="left" android:id="@id/tituloPuntuacion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instrucciones_puntuacion_titulo" />
        <TextView android:textSize="12.0dip" android:textColor="#ff0000ff" android:gravity="left" android:id="@id/puntuacion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instrucciones_puntuacion" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff0000ff" android:id="@id/boton_volver_de_ayuda" android:background="@drawable/btn_onoff" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="VOLVER" android:shadowColor="#ff000000" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.2" android:layout_x="1.0px" android:layout_y="1.0px" />
    </LinearLayout>
</LinearLayout>